@@ -7,6 +7,7 @@
     padding: 200px;
     position: relative;
     border: 3px dotted rgba(0, 0, 0, 0.3);
+    text-align: center;
     &.hover {
       box-shadow: 0 0px 10px 0px rgba(0, 0, 0, 0.5);
       #ftw-file-upload {
@@ -33,7 +34,7 @@
       }
     }
     #ftw-file-upload {
-      display: block;
+      display: inline;
       box-shadow: none;
       border: none;
       transition: transform 0.2s ease-in-out;
@@ -42,6 +43,12 @@
       border: 5px solid #FFFFFF;
       box-shadow: 0px 0px 0px 4px #000000;
       width: 100px;
+    }
+    #dropzone-replacement-warning {
+      color: darkred;
+      text-align: center;
+      margin-bottom: 40px;
+      font-size: 14px;
     }
   }
   progress {
