@@ -5,6 +5,9 @@ Changelog
 1.10.1 (unreleased)
 -------------------
 
+- Show a hint about the imminent file replacement in the dropzone overlay.
+  [mbaechtold]
+
 - Make sure object modified is fired on quickupload.
   [lknoepfel]
 
